# gdorking

./: .gitignore  LICENSE  README.md  exploitdb.txt  gdorking.py  pyproject.toml
.github/workflows/: build.yml
data/: DO_NOT_POPULATE  google-dorks.csv  google-dorks.md  google-dorks.txt
gdorking/: __init__.py  __main__.py  fetcher.py
