[tool.poetry]
name = "gdorking"
version = "0.1.0"
description = "A package from generating the Google Dorking queries"
authors = ["xransum <xransum@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
retry = "^0.9.2"
beautifulsoup4 = "^4.13.3"
urllib3 = "^2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
